corrected z-index

--- a/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/wga-item.scss
+++ b/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/wga-item.scss
@@ -45,7 +45,7 @@
 		background: url(wga_file_url("images", "red-16.png")) 0 0 no-repeat;
 		
 		position: absolute;
-		zIndex: 100;
+		z-index: 100;
 		font-size: 13px;
 		line-height: 18px;
 		font-weight: normal;
